erDiagram
  USER {
    String id PK
    String name
    String email
    Role role
  }
  SCHOOL {
    String id PK
    String name
    String adminId FK
  }
  CLASSROOM {
    String id PK
    String schoolId FK
    String teacherId FK
  }
  TEST {
    String id PK
    String classId FK
    String createdById FK
  }
  QUESTION {
    String id PK
    String createdById FK
    String schoolId FK
  }
  ATTEMPT {
    String id PK
    String studentId FK
    String testId FK
  }
  RESPONSE {
    String id PK
    String attemptId FK
    String questionId FK
  }
  STUDENTRESULT {
    String id PK
    String studentId FK
    String classId FK
    String schoolId FK
  }
  REPORTCARD {
    String id PK
    String studentId FK
    String classId FK
    String schoolId FK
  }

  USER ||--o{ SCHOOL : manages
  SCHOOL ||--o{ CLASSROOM : has
  CLASSROOM ||--o{ TEST : contains
  TEST ||--o{ QUESTION : contains
  USER ||--o{ QUESTION : created_by
  USER ||--o{ ATTEMPT : takes
  ATTEMPT ||--o{ RESPONSE : has
  USER ||--o{ STUDENTRESULT : has
  CLASSROOM ||--o{ STUDENTRESULT : for
  USER ||--o{ REPORTCARD : has
